mod: creted jfs page from entity

--- a/src/java/Bundle.properties
+++ b/src/java/Bundle.properties
@@ -50,3 +50,451 @@ ListCampaignMasterIndexLink=Index
 ListCampaignMasterTitle_id=Id
 ListCampaignMasterTitle_campaignName=CampaignName
 ListCampaignMasterTitle_master=Master
+ArmMasterCreated=ArmMaster was successfully created.
+ArmMasterUpdated=ArmMaster was successfully updated.
+ArmMasterDeleted=ArmMaster was successfully deleted.
+CreateArmMasterTitle=Create New ArmMaster
+CreateArmMasterSaveLink=Save
+CreateArmMasterShowAllLink=Show All ArmMaster Items
+CreateArmMasterIndexLink=Index
+CreateArmMasterLabel_id=Id:
+CreateArmMasterRequiredMessage_id=The Id field is required.
+CreateArmMasterTitle_id=Id
+CreateArmMasterLabel_name=Name:
+CreateArmMasterTitle_name=Name
+CreateArmMasterLabel_weight=Weight:
+CreateArmMasterTitle_weight=Weight
+CreateArmMasterLabel_price=Price:
+CreateArmMasterTitle_price=Price
+CreateArmMasterLabel_page=Page:
+CreateArmMasterTitle_page=Page
+CreateArmMasterLabel_naturalReachMultiplier=NaturalReachMultiplier:
+CreateArmMasterTitle_naturalReachMultiplier=NaturalReachMultiplier
+CreateArmMasterLabel_range=Range:
+CreateArmMasterTitle_range=Range
+CreateArmMasterLabel_damageDiceNum=DamageDiceNum:
+CreateArmMasterTitle_damageDiceNum=DamageDiceNum
+CreateArmMasterLabel_criticalMultiplier=CriticalMultiplier:
+CreateArmMasterTitle_criticalMultiplier=CriticalMultiplier
+CreateArmMasterLabel_threatRange=ThreatRange:
+CreateArmMasterTitle_threatRange=ThreatRange
+CreateArmMasterLabel_secondDamageDiceNum=SecondDamageDiceNum:
+CreateArmMasterTitle_secondDamageDiceNum=SecondDamageDiceNum
+CreateArmMasterLabel_secondCriticalMultiplier=SecondCriticalMultiplier:
+CreateArmMasterTitle_secondCriticalMultiplier=SecondCriticalMultiplier
+CreateArmMasterLabel_secondThreatRange=SecondThreatRange:
+CreateArmMasterTitle_secondThreatRange=SecondThreatRange
+CreateArmMasterLabel_secondDamageType=SecondDamageType:
+CreateArmMasterTitle_secondDamageType=SecondDamageType
+CreateArmMasterLabel_enhancementBonus=EnhancementBonus:
+CreateArmMasterTitle_enhancementBonus=EnhancementBonus
+CreateArmMasterLabel_description=Description:
+CreateArmMasterTitle_description=Description
+CreateArmMasterLabel_rulebook=Rulebook:
+CreateArmMasterTitle_rulebook=Rulebook
+CreateArmMasterLabel_secondDamageDiceType=SecondDamageDiceType:
+CreateArmMasterTitle_secondDamageDiceType=SecondDamageDiceType
+CreateArmMasterLabel_damageDiceType=DamageDiceType:
+CreateArmMasterTitle_damageDiceType=DamageDiceType
+CreateArmMasterLabel_damageType=DamageType:
+CreateArmMasterTitle_damageType=DamageType
+CreateArmMasterLabel_armType3=ArmType3:
+CreateArmMasterTitle_armType3=ArmType3
+CreateArmMasterLabel_armType2=ArmType2:
+CreateArmMasterTitle_armType2=ArmType2
+CreateArmMasterLabel_armType1=ArmType1:
+CreateArmMasterTitle_armType1=ArmType1
+EditArmMasterTitle=Edit ArmMaster
+EditArmMasterSaveLink=Save
+EditArmMasterViewLink=View
+EditArmMasterShowAllLink=Show All ArmMaster Items
+EditArmMasterIndexLink=Index
+EditArmMasterLabel_id=Id:
+EditArmMasterRequiredMessage_id=The Id field is required.
+EditArmMasterTitle_id=Id
+EditArmMasterLabel_name=Name:
+EditArmMasterTitle_name=Name
+EditArmMasterLabel_weight=Weight:
+EditArmMasterTitle_weight=Weight
+EditArmMasterLabel_price=Price:
+EditArmMasterTitle_price=Price
+EditArmMasterLabel_page=Page:
+EditArmMasterTitle_page=Page
+EditArmMasterLabel_naturalReachMultiplier=NaturalReachMultiplier:
+EditArmMasterTitle_naturalReachMultiplier=NaturalReachMultiplier
+EditArmMasterLabel_range=Range:
+EditArmMasterTitle_range=Range
+EditArmMasterLabel_damageDiceNum=DamageDiceNum:
+EditArmMasterTitle_damageDiceNum=DamageDiceNum
+EditArmMasterLabel_criticalMultiplier=CriticalMultiplier:
+EditArmMasterTitle_criticalMultiplier=CriticalMultiplier
+EditArmMasterLabel_threatRange=ThreatRange:
+EditArmMasterTitle_threatRange=ThreatRange
+EditArmMasterLabel_secondDamageDiceNum=SecondDamageDiceNum:
+EditArmMasterTitle_secondDamageDiceNum=SecondDamageDiceNum
+EditArmMasterLabel_secondCriticalMultiplier=SecondCriticalMultiplier:
+EditArmMasterTitle_secondCriticalMultiplier=SecondCriticalMultiplier
+EditArmMasterLabel_secondThreatRange=SecondThreatRange:
+EditArmMasterTitle_secondThreatRange=SecondThreatRange
+EditArmMasterLabel_secondDamageType=SecondDamageType:
+EditArmMasterTitle_secondDamageType=SecondDamageType
+EditArmMasterLabel_enhancementBonus=EnhancementBonus:
+EditArmMasterTitle_enhancementBonus=EnhancementBonus
+EditArmMasterLabel_description=Description:
+EditArmMasterTitle_description=Description
+EditArmMasterLabel_rulebook=Rulebook:
+EditArmMasterTitle_rulebook=Rulebook
+EditArmMasterLabel_secondDamageDiceType=SecondDamageDiceType:
+EditArmMasterTitle_secondDamageDiceType=SecondDamageDiceType
+EditArmMasterLabel_damageDiceType=DamageDiceType:
+EditArmMasterTitle_damageDiceType=DamageDiceType
+EditArmMasterLabel_damageType=DamageType:
+EditArmMasterTitle_damageType=DamageType
+EditArmMasterLabel_armType3=ArmType3:
+EditArmMasterTitle_armType3=ArmType3
+EditArmMasterLabel_armType2=ArmType2:
+EditArmMasterTitle_armType2=ArmType2
+EditArmMasterLabel_armType1=ArmType1:
+EditArmMasterTitle_armType1=ArmType1
+ViewArmMasterTitle=View
+ViewArmMasterDestroyLink=Destroy
+ViewArmMasterEditLink=Edit
+ViewArmMasterCreateLink=Create New ArmMaster
+ViewArmMasterShowAllLink=Show All ArmMaster Items
+ViewArmMasterIndexLink=Index
+ViewArmMasterLabel_id=Id:
+ViewArmMasterTitle_id=Id
+ViewArmMasterLabel_name=Name:
+ViewArmMasterTitle_name=Name
+ViewArmMasterLabel_weight=Weight:
+ViewArmMasterTitle_weight=Weight
+ViewArmMasterLabel_price=Price:
+ViewArmMasterTitle_price=Price
+ViewArmMasterLabel_page=Page:
+ViewArmMasterTitle_page=Page
+ViewArmMasterLabel_naturalReachMultiplier=NaturalReachMultiplier:
+ViewArmMasterTitle_naturalReachMultiplier=NaturalReachMultiplier
+ViewArmMasterLabel_range=Range:
+ViewArmMasterTitle_range=Range
+ViewArmMasterLabel_damageDiceNum=DamageDiceNum:
+ViewArmMasterTitle_damageDiceNum=DamageDiceNum
+ViewArmMasterLabel_criticalMultiplier=CriticalMultiplier:
+ViewArmMasterTitle_criticalMultiplier=CriticalMultiplier
+ViewArmMasterLabel_threatRange=ThreatRange:
+ViewArmMasterTitle_threatRange=ThreatRange
+ViewArmMasterLabel_secondDamageDiceNum=SecondDamageDiceNum:
+ViewArmMasterTitle_secondDamageDiceNum=SecondDamageDiceNum
+ViewArmMasterLabel_secondCriticalMultiplier=SecondCriticalMultiplier:
+ViewArmMasterTitle_secondCriticalMultiplier=SecondCriticalMultiplier
+ViewArmMasterLabel_secondThreatRange=SecondThreatRange:
+ViewArmMasterTitle_secondThreatRange=SecondThreatRange
+ViewArmMasterLabel_secondDamageType=SecondDamageType:
+ViewArmMasterTitle_secondDamageType=SecondDamageType
+ViewArmMasterLabel_enhancementBonus=EnhancementBonus:
+ViewArmMasterTitle_enhancementBonus=EnhancementBonus
+ViewArmMasterLabel_description=Description:
+ViewArmMasterTitle_description=Description
+ViewArmMasterLabel_rulebook=Rulebook:
+ViewArmMasterTitle_rulebook=Rulebook
+ViewArmMasterLabel_secondDamageDiceType=SecondDamageDiceType:
+ViewArmMasterTitle_secondDamageDiceType=SecondDamageDiceType
+ViewArmMasterLabel_damageDiceType=DamageDiceType:
+ViewArmMasterTitle_damageDiceType=DamageDiceType
+ViewArmMasterLabel_damageType=DamageType:
+ViewArmMasterTitle_damageType=DamageType
+ViewArmMasterLabel_armType3=ArmType3:
+ViewArmMasterTitle_armType3=ArmType3
+ViewArmMasterLabel_armType2=ArmType2:
+ViewArmMasterTitle_armType2=ArmType2
+ViewArmMasterLabel_armType1=ArmType1:
+ViewArmMasterTitle_armType1=ArmType1
+ListArmMasterTitle=List
+ListArmMasterEmpty=(No ArmMaster Items Found)
+ListArmMasterDestroyLink=Destroy
+ListArmMasterEditLink=Edit
+ListArmMasterViewLink=View
+ListArmMasterCreateLink=Create New ArmMaster
+ListArmMasterIndexLink=Index
+ListArmMasterTitle_id=Id
+ListArmMasterTitle_name=Name
+ListArmMasterTitle_weight=Weight
+ListArmMasterTitle_price=Price
+ListArmMasterTitle_page=Page
+ListArmMasterTitle_naturalReachMultiplier=NaturalReachMultiplier
+ListArmMasterTitle_range=Range
+ListArmMasterTitle_damageDiceNum=DamageDiceNum
+ListArmMasterTitle_criticalMultiplier=CriticalMultiplier
+ListArmMasterTitle_threatRange=ThreatRange
+ListArmMasterTitle_secondDamageDiceNum=SecondDamageDiceNum
+ListArmMasterTitle_secondCriticalMultiplier=SecondCriticalMultiplier
+ListArmMasterTitle_secondThreatRange=SecondThreatRange
+ListArmMasterTitle_secondDamageType=SecondDamageType
+ListArmMasterTitle_enhancementBonus=EnhancementBonus
+ListArmMasterTitle_description=Description
+ListArmMasterTitle_rulebook=Rulebook
+ListArmMasterTitle_secondDamageDiceType=SecondDamageDiceType
+ListArmMasterTitle_damageDiceType=DamageDiceType
+ListArmMasterTitle_damageType=DamageType
+ListArmMasterTitle_armType3=ArmType3
+ListArmMasterTitle_armType2=ArmType2
+ListArmMasterTitle_armType1=ArmType1
+ArmType1MasterCreated=ArmType1Master was successfully created.
+ArmType1MasterUpdated=ArmType1Master was successfully updated.
+ArmType1MasterDeleted=ArmType1Master was successfully deleted.
+CreateArmType1MasterTitle=Create New ArmType1Master
+CreateArmType1MasterSaveLink=Save
+CreateArmType1MasterShowAllLink=Show All ArmType1Master Items
+CreateArmType1MasterIndexLink=Index
+CreateArmType1MasterLabel_id=Id:
+CreateArmType1MasterRequiredMessage_id=The Id field is required.
+CreateArmType1MasterTitle_id=Id
+CreateArmType1MasterLabel_name=Name:
+CreateArmType1MasterTitle_name=Name
+EditArmType1MasterTitle=Edit ArmType1Master
+EditArmType1MasterSaveLink=Save
+EditArmType1MasterViewLink=View
+EditArmType1MasterShowAllLink=Show All ArmType1Master Items
+EditArmType1MasterIndexLink=Index
+EditArmType1MasterLabel_id=Id:
+EditArmType1MasterRequiredMessage_id=The Id field is required.
+EditArmType1MasterTitle_id=Id
+EditArmType1MasterLabel_name=Name:
+EditArmType1MasterTitle_name=Name
+ViewArmType1MasterTitle=View
+ViewArmType1MasterDestroyLink=Destroy
+ViewArmType1MasterEditLink=Edit
+ViewArmType1MasterCreateLink=Create New ArmType1Master
+ViewArmType1MasterShowAllLink=Show All ArmType1Master Items
+ViewArmType1MasterIndexLink=Index
+ViewArmType1MasterLabel_id=Id:
+ViewArmType1MasterTitle_id=Id
+ViewArmType1MasterLabel_name=Name:
+ViewArmType1MasterTitle_name=Name
+ListArmType1MasterTitle=List
+ListArmType1MasterEmpty=(No ArmType1Master Items Found)
+ListArmType1MasterDestroyLink=Destroy
+ListArmType1MasterEditLink=Edit
+ListArmType1MasterViewLink=View
+ListArmType1MasterCreateLink=Create New ArmType1Master
+ListArmType1MasterIndexLink=Index
+ListArmType1MasterTitle_id=Id
+ListArmType1MasterTitle_name=Name
+ArmType2MasterCreated=ArmType2Master was successfully created.
+ArmType2MasterUpdated=ArmType2Master was successfully updated.
+ArmType2MasterDeleted=ArmType2Master was successfully deleted.
+CreateArmType2MasterTitle=Create New ArmType2Master
+CreateArmType2MasterSaveLink=Save
+CreateArmType2MasterShowAllLink=Show All ArmType2Master Items
+CreateArmType2MasterIndexLink=Index
+CreateArmType2MasterLabel_id=Id:
+CreateArmType2MasterRequiredMessage_id=The Id field is required.
+CreateArmType2MasterTitle_id=Id
+CreateArmType2MasterLabel_name=Name:
+CreateArmType2MasterTitle_name=Name
+EditArmType2MasterTitle=Edit ArmType2Master
+EditArmType2MasterSaveLink=Save
+EditArmType2MasterViewLink=View
+EditArmType2MasterShowAllLink=Show All ArmType2Master Items
+EditArmType2MasterIndexLink=Index
+EditArmType2MasterLabel_id=Id:
+EditArmType2MasterRequiredMessage_id=The Id field is required.
+EditArmType2MasterTitle_id=Id
+EditArmType2MasterLabel_name=Name:
+EditArmType2MasterTitle_name=Name
+ViewArmType2MasterTitle=View
+ViewArmType2MasterDestroyLink=Destroy
+ViewArmType2MasterEditLink=Edit
+ViewArmType2MasterCreateLink=Create New ArmType2Master
+ViewArmType2MasterShowAllLink=Show All ArmType2Master Items
+ViewArmType2MasterIndexLink=Index
+ViewArmType2MasterLabel_id=Id:
+ViewArmType2MasterTitle_id=Id
+ViewArmType2MasterLabel_name=Name:
+ViewArmType2MasterTitle_name=Name
+ListArmType2MasterTitle=List
+ListArmType2MasterEmpty=(No ArmType2Master Items Found)
+ListArmType2MasterDestroyLink=Destroy
+ListArmType2MasterEditLink=Edit
+ListArmType2MasterViewLink=View
+ListArmType2MasterCreateLink=Create New ArmType2Master
+ListArmType2MasterIndexLink=Index
+ListArmType2MasterTitle_id=Id
+ListArmType2MasterTitle_name=Name
+ArmType3MasterCreated=ArmType3Master was successfully created.
+ArmType3MasterUpdated=ArmType3Master was successfully updated.
+ArmType3MasterDeleted=ArmType3Master was successfully deleted.
+CreateArmType3MasterTitle=Create New ArmType3Master
+CreateArmType3MasterSaveLink=Save
+CreateArmType3MasterShowAllLink=Show All ArmType3Master Items
+CreateArmType3MasterIndexLink=Index
+CreateArmType3MasterLabel_id=Id:
+CreateArmType3MasterRequiredMessage_id=The Id field is required.
+CreateArmType3MasterTitle_id=Id
+CreateArmType3MasterLabel_name=Name:
+CreateArmType3MasterTitle_name=Name
+EditArmType3MasterTitle=Edit ArmType3Master
+EditArmType3MasterSaveLink=Save
+EditArmType3MasterViewLink=View
+EditArmType3MasterShowAllLink=Show All ArmType3Master Items
+EditArmType3MasterIndexLink=Index
+EditArmType3MasterLabel_id=Id:
+EditArmType3MasterRequiredMessage_id=The Id field is required.
+EditArmType3MasterTitle_id=Id
+EditArmType3MasterLabel_name=Name:
+EditArmType3MasterTitle_name=Name
+ViewArmType3MasterTitle=View
+ViewArmType3MasterDestroyLink=Destroy
+ViewArmType3MasterEditLink=Edit
+ViewArmType3MasterCreateLink=Create New ArmType3Master
+ViewArmType3MasterShowAllLink=Show All ArmType3Master Items
+ViewArmType3MasterIndexLink=Index
+ViewArmType3MasterLabel_id=Id:
+ViewArmType3MasterTitle_id=Id
+ViewArmType3MasterLabel_name=Name:
+ViewArmType3MasterTitle_name=Name
+ListArmType3MasterTitle=List
+ListArmType3MasterEmpty=(No ArmType3Master Items Found)
+ListArmType3MasterDestroyLink=Destroy
+ListArmType3MasterEditLink=Edit
+ListArmType3MasterViewLink=View
+ListArmType3MasterCreateLink=Create New ArmType3Master
+ListArmType3MasterIndexLink=Index
+ListArmType3MasterTitle_id=Id
+ListArmType3MasterTitle_name=Name
+DamageTypeMasterCreated=DamageTypeMaster was successfully created.
+DamageTypeMasterUpdated=DamageTypeMaster was successfully updated.
+DamageTypeMasterDeleted=DamageTypeMaster was successfully deleted.
+CreateDamageTypeMasterTitle=Create New DamageTypeMaster
+CreateDamageTypeMasterSaveLink=Save
+CreateDamageTypeMasterShowAllLink=Show All DamageTypeMaster Items
+CreateDamageTypeMasterIndexLink=Index
+CreateDamageTypeMasterLabel_id=Id:
+CreateDamageTypeMasterRequiredMessage_id=The Id field is required.
+CreateDamageTypeMasterTitle_id=Id
+CreateDamageTypeMasterLabel_name=Name:
+CreateDamageTypeMasterTitle_name=Name
+EditDamageTypeMasterTitle=Edit DamageTypeMaster
+EditDamageTypeMasterSaveLink=Save
+EditDamageTypeMasterViewLink=View
+EditDamageTypeMasterShowAllLink=Show All DamageTypeMaster Items
+EditDamageTypeMasterIndexLink=Index
+EditDamageTypeMasterLabel_id=Id:
+EditDamageTypeMasterRequiredMessage_id=The Id field is required.
+EditDamageTypeMasterTitle_id=Id
+EditDamageTypeMasterLabel_name=Name:
+EditDamageTypeMasterTitle_name=Name
+ViewDamageTypeMasterTitle=View
+ViewDamageTypeMasterDestroyLink=Destroy
+ViewDamageTypeMasterEditLink=Edit
+ViewDamageTypeMasterCreateLink=Create New DamageTypeMaster
+ViewDamageTypeMasterShowAllLink=Show All DamageTypeMaster Items
+ViewDamageTypeMasterIndexLink=Index
+ViewDamageTypeMasterLabel_id=Id:
+ViewDamageTypeMasterTitle_id=Id
+ViewDamageTypeMasterLabel_name=Name:
+ViewDamageTypeMasterTitle_name=Name
+ListDamageTypeMasterTitle=List
+ListDamageTypeMasterEmpty=(No DamageTypeMaster Items Found)
+ListDamageTypeMasterDestroyLink=Destroy
+ListDamageTypeMasterEditLink=Edit
+ListDamageTypeMasterViewLink=View
+ListDamageTypeMasterCreateLink=Create New DamageTypeMaster
+ListDamageTypeMasterIndexLink=Index
+ListDamageTypeMasterTitle_id=Id
+ListDamageTypeMasterTitle_name=Name
+DiceMasterCreated=DiceMaster was successfully created.
+DiceMasterUpdated=DiceMaster was successfully updated.
+DiceMasterDeleted=DiceMaster was successfully deleted.
+CreateDiceMasterTitle=Create New DiceMaster
+CreateDiceMasterSaveLink=Save
+CreateDiceMasterShowAllLink=Show All DiceMaster Items
+CreateDiceMasterIndexLink=Index
+CreateDiceMasterLabel_id=Id:
+CreateDiceMasterRequiredMessage_id=The Id field is required.
+CreateDiceMasterTitle_id=Id
+CreateDiceMasterLabel_name=Name:
+CreateDiceMasterTitle_name=Name
+CreateDiceMasterLabel_type=Type:
+CreateDiceMasterTitle_type=Type
+EditDiceMasterTitle=Edit DiceMaster
+EditDiceMasterSaveLink=Save
+EditDiceMasterViewLink=View
+EditDiceMasterShowAllLink=Show All DiceMaster Items
+EditDiceMasterIndexLink=Index
+EditDiceMasterLabel_id=Id:
+EditDiceMasterRequiredMessage_id=The Id field is required.
+EditDiceMasterTitle_id=Id
+EditDiceMasterLabel_name=Name:
+EditDiceMasterTitle_name=Name
+EditDiceMasterLabel_type=Type:
+EditDiceMasterTitle_type=Type
+ViewDiceMasterTitle=View
+ViewDiceMasterDestroyLink=Destroy
+ViewDiceMasterEditLink=Edit
+ViewDiceMasterCreateLink=Create New DiceMaster
+ViewDiceMasterShowAllLink=Show All DiceMaster Items
+ViewDiceMasterIndexLink=Index
+ViewDiceMasterLabel_id=Id:
+ViewDiceMasterTitle_id=Id
+ViewDiceMasterLabel_name=Name:
+ViewDiceMasterTitle_name=Name
+ViewDiceMasterLabel_type=Type:
+ViewDiceMasterTitle_type=Type
+ListDiceMasterTitle=List
+ListDiceMasterEmpty=(No DiceMaster Items Found)
+ListDiceMasterDestroyLink=Destroy
+ListDiceMasterEditLink=Edit
+ListDiceMasterViewLink=View
+ListDiceMasterCreateLink=Create New DiceMaster
+ListDiceMasterIndexLink=Index
+ListDiceMasterTitle_id=Id
+ListDiceMasterTitle_name=Name
+ListDiceMasterTitle_type=Type
+RulebookMasterCreated=RulebookMaster was successfully created.
+RulebookMasterUpdated=RulebookMaster was successfully updated.
+RulebookMasterDeleted=RulebookMaster was successfully deleted.
+CreateRulebookMasterTitle=Create New RulebookMaster
+CreateRulebookMasterSaveLink=Save
+CreateRulebookMasterShowAllLink=Show All RulebookMaster Items
+CreateRulebookMasterIndexLink=Index
+CreateRulebookMasterLabel_id=Id:
+CreateRulebookMasterRequiredMessage_id=The Id field is required.
+CreateRulebookMasterTitle_id=Id
+CreateRulebookMasterLabel_name=Name:
+CreateRulebookMasterTitle_name=Name
+CreateRulebookMasterLabel_description=Description:
+CreateRulebookMasterTitle_description=Description
+EditRulebookMasterTitle=Edit RulebookMaster
+EditRulebookMasterSaveLink=Save
+EditRulebookMasterViewLink=View
+EditRulebookMasterShowAllLink=Show All RulebookMaster Items
+EditRulebookMasterIndexLink=Index
+EditRulebookMasterLabel_id=Id:
+EditRulebookMasterRequiredMessage_id=The Id field is required.
+EditRulebookMasterTitle_id=Id
+EditRulebookMasterLabel_name=Name:
+EditRulebookMasterTitle_name=Name
+EditRulebookMasterLabel_description=Description:
+EditRulebookMasterTitle_description=Description
+ViewRulebookMasterTitle=View
+ViewRulebookMasterDestroyLink=Destroy
+ViewRulebookMasterEditLink=Edit
+ViewRulebookMasterCreateLink=Create New RulebookMaster
+ViewRulebookMasterShowAllLink=Show All RulebookMaster Items
+ViewRulebookMasterIndexLink=Index
+ViewRulebookMasterLabel_id=Id:
+ViewRulebookMasterTitle_id=Id
+ViewRulebookMasterLabel_name=Name:
+ViewRulebookMasterTitle_name=Name
+ViewRulebookMasterLabel_description=Description:
+ViewRulebookMasterTitle_description=Description
+ListRulebookMasterTitle=List
+ListRulebookMasterEmpty=(No RulebookMaster Items Found)
+ListRulebookMasterDestroyLink=Destroy
+ListRulebookMasterEditLink=Edit
+ListRulebookMasterViewLink=View
+ListRulebookMasterCreateLink=Create New RulebookMaster
+ListRulebookMasterIndexLink=Index
+ListRulebookMasterTitle_id=Id
+ListRulebookMasterTitle_name=Name
+ListRulebookMasterTitle_description=Description
