--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.commons-fileupload-1.3.jar=lib/commons-fileupload-1.3.jar
 file.reference.mockito-all-1.9.5.jar=lib/mockito-all-1.9.5.jar
 includes=**
 j2ee.compile.on.save=true
@@ -43,7 +44,9 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mockito-all-1.9.5.jar}
+    ${file.reference.mockito-all-1.9.5.jar}:\
+    ${libs.primefaces.classpath}:\
+    ${file.reference.commons-fileupload-1.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -83,6 +86,7 @@ run.test.classpath=\
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value):
 runmain.jvmargs=
 source.encoding=UTF-8
+source.reference.commons-fileupload-1.3.jar=lib/commons-fileupload-1.3-sources.jar
 source.root=src
 src.dir=${source.root}/java
 test.src.dir=test
