mod: made class list column scrollable. Add home thema of Prime Faces

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -6,7 +6,7 @@
     </context-param>
     <context-param>
       <param-name>primefaces.THEME</param-name>
-      <param-value>rocket</param-value>
+      <param-value>home</param-value>
     </context-param>
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
