--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,6 +31,7 @@ excludes=
 file.reference.commons-fileupload-1.3.jar=lib/commons-fileupload-1.3.jar
 file.reference.mockito-all-1.9.5.jar=lib/mockito-all-1.9.5.jar
 file.reference.rocket-1.0.10.jar=lib/rocket-1.0.10.jar
+file.reference.home-1.0.10.jar=lib/home-1.0.10.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -48,7 +49,7 @@ javac.classpath=\
     ${file.reference.mockito-all-1.9.5.jar}:\
     ${libs.primefaces.classpath}:\
     ${file.reference.commons-fileupload-1.3.jar}:\
-    ${file.reference.rocket-1.0.10.jar}
+    ${file.reference.home-1.0.10.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
