--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,4 @@
-deploy.ant.properties.file=/Users/kaizawa/Library/Application Support/NetBeans/7.3.1/config/GlassFishEE6/Properties/gfv3-1036983295.properties
+deploy.ant.properties.file=/Users/kaizawa/Library/Application Support/NetBeans/7.4/config/GlassFishEE6/Properties/gfv3-1036983295.properties
 j2ee.platform.is.jsr109=true
 j2ee.server.domain=/Applications/NetBeans/glassfish-4.0/glassfish/domains/domain1
 j2ee.server.home=/Applications/NetBeans/glassfish-4.0/glassfish
@@ -6,4 +6,5 @@ j2ee.server.instance=[/Applications/NetBeans/glassfish-4.0/glassfish:/Applicatio
 j2ee.server.middleware=/Applications/NetBeans/glassfish-4.0
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/Users/kaizawa/Library/Application Support/NetBeans/7.3.1/build.properties
+selected.browser=Chrome.INTEGRATED
+user.properties.file=/Users/kaizawa/Library/Application Support/NetBeans/7.4/build.properties
